kubernative/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nearby-backend

spec:

  # Send traffic to Pods having this label
  selector:
    app: nearby-backend

  ports:

    # Kubernetes Service port
    - port: 80

      # Application container port
      targetPort: 7050

  # Internal Kubernetes service
  type: ClusterIP
