kubernative/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sumo-backend-ingress

  annotations:

    # AWS Load Balancer Controller
    kubernetes.io/ingress.class: alb

    # Internet-facing ALB
    alb.ingress.kubernetes.io/scheme: internet-facing

    # Send traffic directly to Pod IP
    alb.ingress.kubernetes.io/target-type: ip

spec:

  rules:

    # Dummy domain
    - host: api.sumo.example.com

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: sumo-backend

                port:
                  number: 80
